# discollector

./: Cargo.toml
src/: error.rs  macros.rs  main.rs
src/discord/: mod.rs  session.rs  validator.rs
src/discord/structs/: globals.rs  guild.rs  invite.rs  mod.rs  snowflake.rs  user.rs  widget.rs
src/mods/: context.rs  database.rs  mod.rs
