[package]
name = "discollector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Runtime
tokio = { version = "1.14.0", features = ["full"] }

# Serialization & JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"

# Utilities
futures = { version = "0.3", default-features = true }
tokio-util = "0.6.9"
anyhow = "1.0.51"

# Other
reqwest = { version = "0.11", features = ["json"] }
websocket-lite = "0.5.0"
rand = "0.8.4"
dotenv = "0.15.0"

# Database
mongodb = "2.1.0"